<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Judas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_tonvibes">TONVIBES</string>
    <string name="lbl_iniciar_sesi_n">Iniciar sesión</string>
    <string name="lbl_registrarse">Registrarse</string>
    <string name="msg_o_iniciar_sesi">O iniciar sesión con</string>
    <string name="lbl_google">Google</string>
    <string name="msg_has_olvidado_l">¿Has olvidado la contraseña?</string>
    <string name="lbl">***********</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="msg_no_estas_regis">¿No estas registrado? </string>
    <string name="lbl_contrase_a">Contraseña</string>
    <string name="msg_nombre_de_usuar">Nombre de usuario</string>
    <string name="msg_o_registrartse">O registrartse con</string>
    <string name="msg_verificar_contr">Verificar contraseña</string>
    <string name="lbl_regisrarse">Regisrarse</string>
    <string name="lbl_tienes_cuenta">¿Tienes cuenta?</string>
    <string name="lbl_busca_tu_amigo">Busca tu amigo</string>
    <string name="msg_tonaxe4_gmail_c">tonaxe4@gmail.com</string>
    <string name="lbl_a_adir_correo">Añadir correo</string>
    <string name="msg_tonaxe_gmail_co">tonaxe@gmail.com</string>
    <string name="msg_tonaxe3_gmail_c">tonaxe3@gmail.com</string>
    <string name="msg_tonaxe2_gmail_c">tonaxe2@gmail.com</string>
    <string name="msg_tonaxe1_gmail_c">tonaxe1@gmail.com</string>
    <string name="msg_tonaxe5_gmail_c">tonaxe5@gmail.com</string>
    <string name="lbl_email">Email</string>
    <string name="msg_correo_electr_n">Correo electrónico</string>
    <string name="msg_si_has_olvidado">Si has olvidado la contraseña procede a poner tu correo y te llegará un código de verificación.</string>
    <string name="lbl_enviar">Enviar</string>
    <string name="msg_se_le_ha_propor">Se le ha proporcionado un correo en el cual tiene un código, por favor introdúzcalo para cambiar su contraseña.</string>
    <string name="msg_c_digo_de_verif">Código de verificación</string>
    <string name="lbl_c_digo">Código</string>
    <string name="msg_por_favor_revis">Por favor revisé su correo</string>
    <string name="lbl_verificar">Verificar</string>
    <string name="msg_restaurar_la_co">Restaurar la contraseña</string>
    <string name="msg_nueva_contrase">Nueva contraseña</string>
    <string name="msg_introduzca_la_n">Introduzca la nueva contraseña.</string>
    <string name="msg_repite_la_contr">Repite la contraseña</string>
    <string name="msg_restaurar_la_co2">Restaurar la contraseña </string>
    <string name="msg_has_cambiado_tu">Has cambiado tu contraseña con éxito, inicia sesión para poder acceder a tu cuenta.</string>
    <string name="msg_contrase_a_camb">Contraseña cambiada!</string>
    <string name="lbl_inicia_sesi_n">Inicia sesión</string>
    <string name="lbl_amigos_en_com_n">Amigos en común</string>
    <string name="lbl_1">1</string>
    <string name="msg_klk_mi_negro_es">Klk mi negro estoy hukiao</string>
    <string name="lbl_frankpa">FrankPa</string>
    <string name="lbl_hace_12_min">hace 12 min</string>
    <string name="lbl_guardar">Guardar</string>
    <string name="lbl_tu_perfil">Tu perfil</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="lbl_gmail">Gmail</string>
    <string name="lbl_cancerlar">Cancerlar</string>
    <string name="msg_yepa_que_pasa_g">Yepa que pasa gente estoy bien marica</string>
    <string name="lbl_en_linea">En linea</string>
    <string name="msg_escribe_tu_mens">Escribe tu mensaje</string>
    <string name="msg_me_has_llamado">Me has llamado marica? Tu si que eres maricon</string>
    <string name="msg_buena_idea_si"> ¡Buena idea! Siempre es agradable tener una buena conversación después de ver una película interesante. ¿Algún lugar en mente para la cena?  ¡Buena idea! Siempre es agradable tener una buena conversación después de ver una película interesante. </string>
    <string name="msg_hola_c_mo_ha">¡Hola! ¿Cómo has estado triple hdp?</string>
    <string name="msg_que_me_estas_co">Que me estas contando?</string>
    <string name="lbl_duro">DURO</string>
    <string name="lbl_reggaeton_duro">REGGAETON DURO</string>
    <string name="lbl_reggaeton">REGGAETON</string>
    <string name="lbl_feid">Feid</string>
    <string name="lbl_ferxxo100">Ferxxo100</string>
    <string name="lbl_00_36">00:36</string>
    <string name="lbl_05_39">05:39</string>
</resources>