<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearResetContraDos"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_900">
        <ImageView android:id="@+id/imageArrowleft"
            android:layout_gravity="start"
            android:layout_height="@dimen/_18pxh"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="@dimen/_24pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnporfavorrevis"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_36pxv"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_65pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtPorfavorrevis"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/msg_por_favor_revis"
                style="@style/txtMadabold20" tools:text="@string/msg_por_favor_revis"/>
            <TextView android:gravity="start"
                android:id="@+id/txtSelehapropor"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_100"
                android:layout_marginEnd="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:text="@string/msg_se_le_ha_propor"
                style="@style/txtMadalight17" tools:text="@string/msg_se_le_ha_propor"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtCdigodeverif"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_62pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/msg_c_digo_de_verif"
                style="@style/txtMadabold25" tools:text="@string/msg_c_digo_de_verif"/>
            <EditText android:ellipsize="end"
                android:gravity="left"
                android:id="@+id/txtGroupTwo"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_8pxv"
                android:paddingStart="@dimen/_10pxh"
                android:paddingTop="@dimen/_7pxv"
                android:singleLine="true"
                android:hint="@string/lbl_c_digo"
                style="@style/txtSolidRounded" tools:text="@string/lbl_c_digo"/>
            <FrameLayout android:id="@+id/frameStackverificar"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_54pxv"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_87pxv"
                android:layout_width="@dimen/_276pxh" style="@style/groupStylebluegray_100cornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtVerificar"
                    android:layout_gravity="top|center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:layout_marginEnd="@dimen/_98pxh"
                    android:layout_marginStart="@dimen/_98pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_verificar"
                    style="@style/txtMadabold20_1" tools:text="@string/lbl_verificar"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtVerificarOne"
                    android:layout_gravity="top|center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:layout_marginEnd="@dimen/_98pxh"
                    android:layout_marginStart="@dimen/_98pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_verificar"
                    style="@style/txtMadabold20_1" tools:text="@string/lbl_verificar"/>
            </FrameLayout>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowtienescuenta"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_106pxh"
                android:layout_marginTop="@dimen/_200pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTienescuenta"
                    style="@style/txtOutfitregular13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.55"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/lbl_tienes_cuenta"
                    tools:text="@string/lbl_tienes_cuenta" />

                <TextView
                    android:id="@+id/txtIniciarsesin"
                    style="@style/txtOutfitregular13"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_3pxh"
                    android:layout_weight="0.45"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/lbl_iniciar_sesi_n"
                    tools:text="@string/lbl_iniciar_sesi_n" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
