<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLogIn"
            style="@style/groupStylegray_900"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageArrowleft"
                android:layout_width="@dimen/_24pxh"
                android:layout_height="@dimen/_18pxh"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_marginEnd="@dimen/_17pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowleft"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_arrowleft" />

            <LinearLayout
                android:id="@+id/linearColumnnombredeusuar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_100pxv"
                android:layout_marginEnd="@dimen/_17pxh"
                android:layout_marginBottom="@dimen/_43pxv"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNombredeusuar"
                    style="@style/txtMadabold25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/msg_nombre_de_usuar"
                    tools:text="@string/msg_nombre_de_usuar" />

                <EditText
                    android:id="@+id/txtGroupTwo"
                    style="@style/txtSolidRounded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_marginEnd="@dimen/_7pxh"
                    android:ellipsize="end"
                    android:gravity="left"
                    android:hint="@string/lbl_usuario"
                    android:paddingStart="@dimen/_10pxh"
                    android:paddingTop="@dimen/_10pxv"
                    android:paddingBottom="@dimen/_8pxv"
                    android:singleLine="true"
                    tools:text="@string/lbl_usuario" />

                <TextView
                    android:id="@+id/txtContrasea"
                    style="@style/txtMadabold25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_51pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/lbl_contrase_a"
                    tools:text="@string/lbl_contrase_a" />

                <LinearLayout
                    android:id="@+id/linearRowpassword"
                    style="@style/groupStylebluegray_100cornerRadius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_marginEnd="@dimen/_7pxh"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtPassword"
                        style="@style/txtMadabold15"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_weight="0.79"
                        android:ellipsize="end"
                        android:hint="@string/lbl"
                        android:singleLine="true"
                        tools:text="@string/lbl" />

                    <ImageView
                        android:id="@+id/imageEye"
                        android:layout_width="@dimen/_20pxh"
                        android:layout_height="@dimen/_18pxh"
                        android:layout_marginStart="@dimen/_188pxh"
                        android:layout_marginTop="@dimen/_14pxv"
                        android:layout_marginEnd="@dimen/_9pxh"
                        android:layout_marginBottom="@dimen/_8pxv"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_eye"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_eye" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtHasolvidadol"
                    style="@style/txtMadabold13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/msg_has_olvidado_l"
                    tools:text="@string/msg_has_olvidado_l" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnIniciarSesin"
                    style="@style/btnSolidRounded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_84pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingBottom="@dimen/_14pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_iniciar_sesi_n"
                    android:textAllCaps="false"
                    tools:text="@string/lbl_iniciar_sesi_n" />

                <LinearLayout
                    android:id="@+id/linearRowvectorfour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40pxv"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/lineVectorFour"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_marginBottom="@dimen/_4pxv"
                        android:layout_weight="0.34"
                        android:background="@color/gray_500" />

                    <TextView
                        android:id="@+id/txtOiniciarsesi"
                        style="@style/txtOutfitregular12"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_6pxh"
                        android:layout_weight="0.33"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/msg_o_iniciar_sesi"
                        tools:text="@string/msg_o_iniciar_sesi" />

                    <View
                        android:id="@+id/lineVectorThree"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_4pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_marginBottom="@dimen/_4pxv"
                        android:layout_weight="0.34"
                        android:background="@color/gray_500" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearRowgooglelogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_36pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageGooglelogo"
                        android:layout_width="@dimen/_21pxh"
                        android:layout_height="@dimen/_21pxh"
                        android:layout_marginLeft="@dimen/_130pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_googlelogo"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_googlelogo" />

                    <TextView
                        android:id="@+id/txtGoogle"
                        style="@style/txtPoppinsmedium14"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_weight="0.7"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/lbl_google"
                        tools:text="@string/lbl_google" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearRowlanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_80pxh"
                    android:layout_marginTop="@dimen/_101pxv"
                    android:layout_marginEnd="@dimen/_90pxh"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtLanguage"
                        style="@style/txtOutfitregular13"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_weight="0.66"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/msg_no_estas_regis"
                        tools:text="@string/msg_no_estas_regis" />

                    <TextView
                        android:id="@+id/txtRegistrarse"
                        style="@style/txtOutfitregular13"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4pxh"
                        android:layout_weight="0.34"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/lbl_registrarse"
                        tools:text="@string/lbl_registrarse" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
